<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/android_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_launcher_foreground"
        android:background="@color/colorButton"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/android_logo_image"/>

    <TextView
        android:id="@+id/question_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/android_imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        tools:text="hellooooooooooooooooooooooooooooooooooooooooooooooooooooooooo"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/colorButton"
        android:paddingEnd="10dp"
        android:paddingStart="10dp" />

    <LinearLayout
        android:id="@+id/rootLayout_trueFalse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/question_textView"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/falseBtn_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/textFalse"
            android:background="@color/colorButton"
            android:textColor="@color/colorText"
            android:layout_marginEnd="7dp"
            android:layout_marginStart="0dp"
            android:textSize="19sp"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="7dp" />

        <Button
            android:id="@+id/trueBtn_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/textTrue"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="0dp"
            android:background="@color/colorButton"
            android:textColor="@color/colorText"
            android:textSize="19sp"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="7dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/rootLayout_previousNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rootLayout_trueFalse"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <ImageButton
            android:id="@+id/previousBtn_imageButton"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:background="@color/colorButton"
            android:src="@android:drawable/ic_media_previous"
            android:layout_marginEnd="7dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="7dp"
            android:contentDescription="@string/previous_button"/>

        <ImageButton
            android:id="@+id/nextBtn_imageButton"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:src="@android:drawable/ic_media_next"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="0dp"
            android:background="@color/colorButton"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="7dp"
            android:contentDescription="@string/next_button"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>